Alignment correction register.html

--- a/brmapp/static/style.css
+++ b/brmapp/static/style.css
@@ -120,6 +120,7 @@ label{
 #formContent{
     display: flex;
     justify-content: center;
+    flex-direction: column;
 }
 @media(max-width:576px){
     .input.box.input.field{
